divided code into modules

--- a/notebooks/ner.ipynb
+++ b/notebooks/ner.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "0c8973fe",
    "metadata": {},
    "outputs": [],
@@ -2475,9 +2475,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mlops]",
+   "display_name": "mlops",
    "language": "python",
-   "name": "conda-env-mlops-py"
+   "name": "mlops"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2503,6 +2503,11 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
